crates/toml_edit/tests/snapshots/invalid/string/bad-hex-esc-01.stderr
TOML parse error at line 1, column 22
  |
1 | bad-hex-esc-01 = "\x0g"
  |                      ^
too few unicode value digits, expected unicode hexadecimal value
